--- a/mainpage.html
+++ b/mainpage.html
@@ -29,10 +29,9 @@
           <a class="subscribe" href="#sinscrire">S'inscrire</a>
         </div>
       </div>
-     
+
       <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
       <p>En pleins centre ville ou en pleine nature</p>
-     
     </header>
 
     <section>
@@ -158,7 +157,7 @@
             </div>
           </div>
         </div>
-        <a class="title-bottom"href="#">Afficher plus</a>
+        <a class="title-bottom" href="#">Afficher plus</a>
       </section>
       <section class="rightside">
         <h1>Les plus populaires</h1>
@@ -170,8 +169,13 @@
             alt="photo"
           />
           <div class="room-container-2">
-            <h4>Auberge le soleil du matin</h4>
+            <h4>Hôtel le soleil du matin</h4>
             <p>Nuit à partir 128€</p>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
           </div>
         </div>
 
@@ -184,6 +188,11 @@
           <div class="room-container-2">
             <h4>Au coeur de l'eau Chambre d'hôtes</h4>
             <p>Nuit à partir 71€</p>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star"></span>
           </div>
         </div>
 
@@ -196,6 +205,11 @@
           <div class="room-container-2">
             <h4>Hôtel Tout bleu et Blanc</h4>
             <p>Nuit à partir 68€</p>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star"></span>
           </div>
         </div>
       </section>
