--- a/mainpage.html
+++ b/mainpage.html
@@ -161,8 +161,8 @@
       </section>
       <section class="rightside">
         <div class="result-title-2">
-        <h1>Les plus populaires</h1>
-        <i class="fas fa-chart-line"></i>
+          <h1>Les plus populaires</h1>
+          <i class="fas fa-chart-line"></i>
         </div>
 
         <div class="card2">
@@ -217,48 +217,67 @@
         </div>
       </section>
     </div>
-    <section class="bottom">
+    <section class="bottom-section">
       <h1>Activités à Marseille</h1>
-
-      <div class="activiteresult">
-        <a href="img/medium/vieuxport_medium.jpg" target="_blank"
-          ><img src="img/small/vieuxport_small.jpg" alt="Vieux Port"
-        /></a>
-        <p>Vieux Port</p>
-      </div>
-      <div class="activiteresult">
-        <a href="img/medium/fortdepomegues_medium.jpg" target="_blank"
-          ><img src="img/small/fortdepomegues_small.jpg" alt="Fort de Pomègues"
-        /></a>
-        <p>Fort de Pomègues</p>
-      </div>
-      <div class="activiteresult">
-        <a href="img/medium/ilesdufrioul_medium.jpg" target="_blank"
-          ><img src="img/small/ilesdufrioul_small.jpg" alt="Îles du Frioul"
-        /></a>
-        <p>Îles du Frioul</p>
-      </div>
-      <div class="activiteresult">
-        <a href="img/medium/parcnational_medium.jpg" target="_blank"
-          ><img
-            src="img/small/parcnational_small.jpg"
-            alt="Parc National des Calanques"
-        /></a>
-        <p>Parc National des Calanques</p>
-      </div>
-      <div class="activiteresult">
-        <a href="img/medium/notredame_medium.jpg" target="_blank"
-          ><img
-            src="img/small/notredame_small.jpg"
-            alt="Notre-Dame-de-la-Garde"
-        /></a>
-        <p>Notre-Dame-de-la-Garde</p>
-      </div>
-      <div class="activiteresult">
-        <a href="img/medium/parclongchamp_medium.jpg" target="_blank"
-          ><img src="img/small/parclongchamp_small.jpg" alt="Parc Longchamp"
-        /></a>
-        <p>Parc Longchamp</p>
+      <div class="bottom-result">
+        <div class="activite-result">
+          <a href="img/medium/vieuxport_medium.jpg" target="_blank"
+            ><img
+              class="pics3"
+              src="img/small/vieuxport_small.jpg"
+              alt="Vieux Port"
+          /></a>
+          <p>Vieux Port</p>
+        </div>
+        <div class="aresult-22">
+          <div class="activite-result-2">
+            <a href="img/medium/fortdepomegues_medium.jpg" target="_blank"
+              ><img
+                class="pics4"
+                src="img/small/fortdepomegues_small.jpg"
+                alt="Fort de Pomègues"
+            /></a>
+            <p>Fort de Pomègues</p>
+          </div>
+          <div class="activite-result-2">
+            <a href="img/medium/ilesdufrioul_medium.jpg" target="_blank"
+              ><img
+                class="pics4"
+                src="img/small/ilesdufrioul_small.jpg"
+                alt="Îles du Frioul"
+            /></a>
+            <p>Îles du Frioul</p>
+          </div>
+        </div>
+        <div class="activite-result">
+          <a href="img/medium/parcnational_medium.jpg" target="_blank"
+            ><img
+              class="pics3"
+              src="img/small/parcnational_small.jpg"
+              alt="Parc National des Calanques"
+          /></a>
+          <p>Parc National des Calanques</p>
+        </div>
+        <div class="aresult-22">
+          <div class="activite-result-2">
+            <a href="img/medium/notredame_medium.jpg" target="_blank"
+              ><img
+                class="pics4"
+                src="img/small/notredame_small.jpg"
+                alt="Notre-Dame-de-la-Garde"
+            /></a>
+            <p>Notre-Dame-de-la-Garde</p>
+          </div>
+          <div class="activite-result-2">
+            <a href="img/medium/parclongchamp_medium.jpg" target="_blank"
+              ><img
+                class="pics4"
+                src="img/small/parclongchamp_small.jpg"
+                alt="Parc Longchamp"
+            /></a>
+            <p>Parc Longchamp</p>
+          </div>
+        </div>
       </div>
     </section>
     <footer>
