--- a/mainpage.html
+++ b/mainpage.html
@@ -39,7 +39,10 @@
         <i class="fas fa-map-marker-alt"></i>
 
         <input type="text" class="searchTerm" placeholder="Marseille, France" />
-        <button type="submit" class="searchButton">Rechercher</button>
+        <button type="submit" class="searchButton">
+          <i class="fas fa-search"></i
+          ><span class="text-rechercher">Rechercher</span>
+        </button>
       </div>
       <div class="contenairbtn">
         <p>Filtres</p>
@@ -57,17 +60,19 @@
       </div>
     </section>
 
-
-
-
-
     <div class="main-result">
 
-      <section class="mainsection">
+
+      <section class="main-section">
+
         <h1 class="result-title">Hébergement à Marseille</h1>
-        
+
         <div class="center">
+
+
+
           <div class="card1">
+            
             <img
               class="pics1"
               src="img/medium/aubergecannebiere_medium.jpg"
