--- a/mainpage.html
+++ b/mainpage.html
@@ -8,6 +8,7 @@
     <title>Reservia</title>
     <meta name="description" content="Reservia" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style-mobile.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
