--- a/mainpage.html
+++ b/mainpage.html
@@ -8,9 +8,12 @@
 
     <title>Reservia</title>
     <meta name="viewport" content="width=device-width">
-
     <meta name="description" content="Reservia" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style-header.css" />
+    <link rel="stylesheet" href="style-search.css" />
+    <link rel="stylesheet" href="style-main-result.css" />
+    <link rel="stylesheet" href="style-activite.css" />
     <link rel="stylesheet" href="style-mobile.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
