--- a/mainpage.html
+++ b/mainpage.html
@@ -43,7 +43,7 @@
       <p>En pleins centre ville ou en pleine nature</p>
     </header>
 
-    <section class="search-section">
+    <div class="search-section">
       <div class="search">
         <i class="fas fa-map-marker-alt"></i>
 
@@ -67,7 +67,7 @@
         <i class="fas fa-info-circle"></i>
         Plus de 500 logements sont disponibles dans cette ville
       </div>
-    </section>
+    </div>
 
     <div class="main-result">
       <section class="main-section">
