--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <title>Reservia</title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="Reservia" />
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/style-header.css" />
-    <link rel="stylesheet" href="css/style-search.css" />
-    <link rel="stylesheet" href="css/style-main-result.css" />
-    <link rel="stylesheet" href="css/style-activite.css" />
-    <link rel="stylesheet" href="css/style-mobile.css" />
+    <link rel="stylesheet" href="CSS/normalize.css" />
+    <link rel="stylesheet" href="CSS/style.css" />
+    <link rel="stylesheet" href="CSS/style-header.css" />
+    <link rel="stylesheet" href="CSS/style-search.css" />
+    <link rel="stylesheet" href="CSS/style-main-result.css" />
+    <link rel="stylesheet" href="CSS/style-activite.css" />
+    <link rel="stylesheet" href="CSS/style-mobile.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
